<resources>
    <string name="app_name">Food Order App Latest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_image">Food Image</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="food_price_in_rupee">₹ %1$s</string>
    <string name="your_orders">Your Orders</string>
    <string name="food_name">Food Name</string>
    <string name="make_order_description">Meaty portabello mushrooms make for the perfect vegetarian burger</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="price_make_order">Price</string>
    <string name="_50">₹ 50</string>
    <string name="place_order">Place Order</string>
    <string name="empty" />
    <string name="ordered_food_image">Ordered Food Image</string>
    <string name="order_number">Order Number :</string>
    <string name="rupee_sign">₹ </string>
    <string name="quantity">Quantity :</string>
    <string name="order_number_with_value">Order Number : %1$s</string>
    <string name="foodprice_with_value">₹ %1$s</string>
    <string name="quantity_with_value">Quantity : %1$s</string>
    <string name="with_extra_cheese">%1$s with extra cheese</string>
    <string name="update_order">Update Order</string>
</resources>