<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.makeOrder.MakeOrderFragment"
    android:id="@+id/sv">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ProgressBar
        android:id="@+id/pb"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardUseCompatPadding="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                 <ImageView
                     android:id="@+id/iv_food_image"
                     android:contentDescription="@string/food_image"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_200sdp"
                     android:src="@drawable/ic_launcher_background"
                     android:scaleType="fitXY"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"/>
                 <TextView
                     android:id="@+id/tv_food_name"
                     android:text="@string/food_name"
                     android:textSize="@dimen/_20ssp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/iv_food_image"
                     android:layout_width="wrap_content"
                     android:layout_marginVertical="@dimen/_5sdp"
                     android:layout_height="wrap_content"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintWidth_percent="0.8"
            android:text="@string/make_order_description"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/cv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <EditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            style="@style/EditText"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:autofillHints="name"
            android:background="@drawable/et_border"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc"/>
        <EditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            style="@style/EditText"
            android:layout_height="@dimen/_40sdp"
            android:hint="@string/enter_phone"
            android:inputType="phone"
            android:autofillHints="phone"
            android:background="@drawable/et_border"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name"/>
        <EditText
            android:id="@+id/et_quantity"
            android:layout_width="0dp"
            style="@style/EditText"
            android:layout_height="@dimen/_40sdp"
            android:hint="@string/enter_quantity"
            android:inputType="phone"
            android:autofillHints="10"
            android:background="@drawable/et_border"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_phone"/>
        <TextView
            android:id="@+id/tv_price"
            android:text="@string/price_make_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            app:layout_constraintTop_toBottomOf="@+id/et_quantity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tv_50"
            android:text="@string/_50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/app_color"
            android:textSize="@dimen/_20ssp"
            android:layout_marginTop="@dimen/_3sdp"
            app:layout_constraintTop_toBottomOf="@+id/tv_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_place_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/btn_bg"
            android:text="@string/place_order"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_50"
            app:layout_constraintWidth_percent="0.8"
            android:layout_marginBottom="@dimen/_20sdp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>