<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/cv_one_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    android:background="@color/black"
    app:cardCornerRadius="@dimen/_10sdp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_food_image"
            android:layout_width="0dp"
            android:layout_height="@dimen/_130sdp"
            android:contentDescription="@string/food_image"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/tv_food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:text="@string/name"
            android:textSize="@dimen/_25ssp"
            app:layout_constraintBottom_toTopOf="@+id/tv_price"
            app:layout_constraintStart_toEndOf="@+id/iv_food_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/app_color"
            android:textSize="@dimen/_15ssp"
            android:layout_marginVertical="@dimen/_5sdp"
            app:layout_constraintBottom_toTopOf="@+id/tv_desc"
            app:layout_constraintStart_toStartOf="@+id/tv_food_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_food_name" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_price"
            app:layout_constraintTop_toBottomOf="@+id/tv_price" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>